components/konflux-rbac/policies/restrict-binding-system-authenticated/validate-restrict-binding-system-authenticated-clusterpolicy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-restrict-binding-system-authenticated
  annotations:
    policies.kyverno.io/title: Restrict Binding System Groups
    policies.kyverno.io/category: Security
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: RoleBinding, RBAC
    policies.kyverno.io/description: >-
      We don't want users to bind system:authenticated group with any role
      except for the konflux-viewer-user-actions ClusterRole.
spec:
  rules:
  - name: restrict-authenticated
    match:
      any:
      - resources:
          kinds:
            - RoleBinding
    context:
    - name: konfluxtype
      apiCall:
        urlPath: "/api/v1/namespaces/{{ request.object.metadata.namespace }}"
        jmesPath: 'metadata.labels."konflux-ci.dev/type"'
    preconditions:
      - key: "{{ request.object.subjects.name }}"
        operator: AnyIn
        value: system:authenticated"
      - key: "{{ request.object.roleRef.kind }}"
        operator: Equals
        value: "ClusterRole"
      - key: "{{ request.object.roleRef.name }}"
        operator: NotEquals
        value: "konflux-viewer-user-actions"
    validate:
      failureAction: Enforce
      message: "Only ClusterRole konflux-viewer-user-actions can be bound to system:authenticated."
      deny:
        conditions:
          all:
          - key: "{{ konfluxtype || '' }}"
            operator: Equals
            value: "tenant"
